Fix clipping bug

--- a/src/components/pages/Store/components/Potion/styles.module.scss
+++ b/src/components/pages/Store/components/Potion/styles.module.scss
@@ -15,7 +15,8 @@
   flex-direction: column;
   text-align: center;
   border: 2px solid $backgroundColor;
-  filter: drop-shadow(0px 5px 3px rgba(0, 0, 0, 0.3));;
+  // filter: drop-shadow(0px 5px 3px rgba(0, 0, 0, 0.3));
+  // z-index: 1;
 
   h3 {
     font-size: 12px;
@@ -49,6 +50,7 @@
     background-color: $backgroundColor;
     border-radius: 0 0 10px 10px;
     overflow: hidden;
+    // z-index: 1;
 
     input::-webkit-outer-spin-button,
     input::-webkit-inner-spin-button {
